Use sets with chunking to avoid saving same channel